src/views/virtualmachines/list/VirtualMachinesList.scss
.co-operator-details__actions {
  .pf-v6-c-dropdown {
    height: fit-content;
  }
}

.vm-listpagebody .pf-v5-c-table {
  .selection-column {
    --pf-v5-c-table--cell--Width: 5%;
  }
}

.vm-list-page-header {
  h1.co-m-pane__heading {
    font-size: var(--pf-t--global--font--size--lg);
  }

  .kv-actions-dropdown {
    .pf-v6-c-menu-toggle {
      z-index: 0;
    }
  }
}

